@@ -7,12 +7,13 @@ tig master
 Improvements:
 
  - Checkout files with unstaged changes. Bound to '!' by default.
- - Main: use --topo-order also when rev-list arguments are given on the
+ - Main view: use --topo-order also when rev-list arguments are given on the
    command line.
+ - Log view: support for refreshing.
 
 Bug fixes:
 
- - Status: use ls-files' --exclude-standard so user specific ignore
+ - Status view: use ls-files' --exclude-standard so user specific ignore
    rules are effective. The option was added in git version 1.5.4.
 
 tig-0.12
